--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,7 @@
     <h1>K. Venkata Sai Manikanta</h1>
     <p>Computer Science Graduate | Data & DevOps Enthusiast</p>
     <div class="buttons">
-      <a href="resume.pdf" download>Download Resume</a>
+      <a href="K.venkata Sai manikanta resume.pdf" download>Download Resume</a>
       <a href="https://www.linkedin.com/in/venkata-sai-manikanta-kamboji-864b95210" target="_blank">LinkedIn Profile</a>
     </div>
   </header>
